--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <h1>Este es mi sitio web</h1>
+  <h1>Pokedex Home</h1>
 </body>
 </html>
